# pymodbus-gui

./: .gitignore  CHANGELOG.md  FILE_OPERATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LOG_FEATURE_UPDATE.md  QUICKSTART.md  README.md  REGISTER_DISPLAY_FIX.md  pyproject.toml  test_address_fix.py  test_logging.py  test_register_import.py  启动程序.bat
src/pymodbus_gui/: run.py
src/pymodbus_gui/core/: __init__.py  device_manager.py  excel_manager.py  register_manager.py  slave_server.py
src/pymodbus_gui/ui/: __init__.py  add_device_dialog.py  add_slave_dialog.py  device_list_widget.py  file_record_dialog.py  log_widget.py  main_window.py  operation_widget.py  slave_list_widget.py  slave_register_widget.py
tools/: generator_index.py
